changes in publications page

--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -4,7 +4,7 @@
     - name: Full Name
       value: Satoshi Ido
     - Email: Email 
-      value: sido@purdue.edu
+      value: idsts2670@gmail.com
     #   value: 14th March 1879
     - name: Languages
       value: English, Japanese
