Disable LSI to avoid sqrt domain error; use official Pages deploy

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,7 +36,7 @@ jobs:
         npm install -g mermaid.cli
         npm install -g purgecss
         export JEKYLL_ENV=production
-        bundle exec jekyll build --lsi
+        bundle exec jekyll build
         purgecss -c purgecss.config.js
     - name: Upload Pages artifact 📦
       uses: actions/upload-pages-artifact@v3
