--- a/_config.yml
+++ b/_config.yml
@@ -185,6 +185,9 @@ latest_posts:
 # Jekyll settings
 # -----------------------------------------------------------------------------
 
+# Disable LSI to avoid classifier math errors during related posts computation
+lsi: false
+
 # Markdown and syntax highlight
 markdown: kramdown
 highlighter: rouge
