--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,11 +33,9 @@ jobs:
     - name: Install and Build 🔧
       run: |
         pip3 install --upgrade jupyter
-        npm install -g mermaid.cli
-        npm install -g purgecss
+        npm install -g @mermaid-js/mermaid-cli
         export JEKYLL_ENV=production
         bundle exec jekyll build
-        purgecss -c purgecss.config.js
     - name: Upload Pages artifact 📦
       uses: actions/upload-pages-artifact@v3
       with:
