Stabilize build: fix Sass, enable ES6 minifier, skip ipynb minify

--- a/_config.yml
+++ b/_config.yml
@@ -246,7 +246,9 @@ sass:
 # -----------------------------------------------------------------------------
 
 jekyll-minifier:
-  exclude: ['robots.txt']
+  exclude: ['robots.txt', '**/*.ipynb.html']
+  uglifier_args:
+    harmony: true
 
 # -----------------------------------------------------------------------------
 # Jekyll Archives
