--- a/_config.yml
+++ b/_config.yml
@@ -265,7 +265,7 @@ jekyll-archives:
     tag: '/blog/tag/:name/'
     category: '/blog/category/:name/'
 
-display_tags: ['data science', 'business', 'statistics', 'codeing'] # these tags will be displayed on the front page of your blog
+display_tags: ['data science', 'business', 'statistics', 'coding'] # these tags will be displayed on the front page of your blog
 # display_categories: ['blockquotes'] # these categories will be displayed on the front page of your blog
 
 # -----------------------------------------------------------------------------
